Created specification "header" file for verifying user commands.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(file_download_server C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(file_download_server main.c)
+add_executable(file_download_server src/org/dsalgos/systemprogramming/client/app/main.c)
