--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_C_STANDARD 11)
 add_executable(file_download_server src/org/dsalgos/systemprogramming/server/app/server.c
         ../../../../Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/errno.h
         ../../../../Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/errno.h
+        ../../../../Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/stat.h
         ../../../../Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/stat.h)
